# Encrypted-Notes

./: .gitignore  PrivacyPolicy.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/c/: CMakeLists.txt
app/src/main/cpp/: native-lib.cpp
app/src/main/res/color/: text_input_outline_color.xml
app/src/main/res/drawable/: baseline_content_copy_24.xml  delete_icon.xml  divider.xml  format_align_center.xml  format_align_justify.xml  format_align_left.xml  format_align_right.xml  format_background_color.xml  format_bold.xml  format_italic.xml  format_quote.xml  format_strikethrough.xml  format_subscript.xml  format_superscript.xml  format_text_color.xml  format_underline.xml  header1.xml  header2.xml  header3.xml  header4.xml  header5.xml  header6.xml  logout.xml  outline_add_box_24.xml  person.xml  redo.xml  rounded_button.xml  rounded_button_selected.xml  rounded_corner.xml  text_format.xml  three_dot.xml  undo.xml
app/src/main/res/font/: custom_font.xml  default_font.xml
app/src/main/res/layout/: activity_greeting.xml  activity_image_detail.xml  activity_login.xml  activity_main.xml  activity_note.xml  activity_pin.xml  activity_register.xml  activity_settings.xml  activity_splash.xml  activity_two_factor.xml  attachment_item_view.xml  fragment_app_pin.xml  fragment_color_picker.xml  fragment_copy_key.xml  (+8 more)
collageview/: build.gradle
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
wysiwyg/: build.gradle.kts
wysiwyg/src/main/assets/: wysiwyg.js
(+271 files in other folders)
